--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
     <meta name="monetag" content="2a5536e7ca751bcf424c0de723119f9a">
+    <script src="https://quge5.com/88/tag.min.js" data-zone="196294" async data-cfasync="false"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ad Website</title>
