Add buttons for external links in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
   <p>Mustertext</p>
+    <button onclick="window.location.href='https://otieu.com/4/10142339';">
+  Weiter zur Seite
+</button>
+<button onclick="window.location.href='https://otieu.com/4/10142401';">
+  Weiter zur Seite
+</button>
+
 
 </body>
 </html>
