--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta name="monetag" content="2a5536e7ca751bcf424c0de723119f9a">
     <script src="https://quge5.com/88/tag.min.js" data-zone="196294" async data-cfasync="false"></script>
+    <script>(function(s){s.dataset.zone='10378503',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ad Website</title>
